spacing and font  fixes

--- a/src/components/demo.css
+++ b/src/components/demo.css
@@ -105,12 +105,13 @@
     .card-text-2{
         display:flex;
         flex-direction:row;
-        width:80%;
+        width:90%;
         margin-top:2%;
         font-size:16px;
         margin-left:30%;
     }
     .user1{
+        padding-left:5%;
         float:left;
     }
     .user2{
